[package]
name = "rust-reddit-saved-exporter"
version = "0.1.0"
authors = ["Sophie 'Sharky' Schumann <sharky@sharky.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = "3.0.0"
reqwest = { version = "0.10.6", features=["json"] }
serde = { version = "1.0.113", features=["derive"] }
serde_json = "1.0.55"
failure = "0.1.8"