[package]
name = "rust-reddit-saved-exporter"
version = "0.1.0"
authors = ["Sophie 'Sharky' Schumann <sharky@sharky.pw>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features=["json"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "0.2", features=["rt-threaded", "macros"] }